package interface_adapter.LevelUp;

public interface LevelUpViewCallback {
    void showLevelUpScreen(LevelUpViewModel levelUpViewModel);
    void hideLevelUpScreen();
}
