package use_case.levelup;

public interface LevelUpInputBoundary {
    void levelUp(LevelUpInputData inputData);
}
